--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
       </div>
     </div>
 
-    <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
+    <!-- <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
       <div class="nsw-card">
         <div class="nsw-card__image">
           <img src="./img/carlisle.png" alt="Screenshot of Harlon City Server's dynmap">
@@ -180,7 +180,7 @@
           <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>
         </div>
       </div>
-    </div>
+    </div> -->
   </div>
 
   
