--- a/index.html
+++ b/index.html
@@ -199,12 +199,8 @@
       <p style="color:#000">Transnet - <strong>Thornsbury's train, tram & bus operator.</strong></p>
       <hr style="background-color:#000">
       <ul style="color:#000">
-        <li><a style="color:#000" href="https://discord.gg/qMmk8MuEBz" target="_blank" rel="noopener noreferrer">Discord</a></li>
-        <li><a style="color:#000"  href="https://youtube.com/channel/UCUsBniuYo4fKNWy-PcAoDNg" target="_blank" rel="noopener noreferrer">YouTube</a></li>
-        <li><a  style="color:#000" href="https://twitter.com/HarlonServer" target="_blank" rel="noopener noreferrer">X/Twitter</a></li>
-        <li><a  style="color:#000" href="https://www.tiktok.com/@harlonserver" target="_blank" rel="noopener noreferrer">Tiktok</a></li>
-        <li><a  style="color:#000" href="https://www.github.com/HarlonServer" target="_blank" rel="noopener noreferrer">GitHub</a></li>
-        <!--<li><a href="https://store.harlonserver.net" target="_blank" rel="noopener noreferrer">Server Store</a></li>-->
+        <li><a  style="color:#000" href="https://x.com/TransnetPT" target="_blank" rel="noopener noreferrer">X/Twitter</a></li>
+        <li><a  style="color:#000" href="https://bsky.app/profile/transnetpt.com" target="_blank" rel="noopener noreferrer">Bluesky</a></li>
       </ul>
       <div class="nsw-footer__info">
         <div class="nsw-footer__copyright" style="color:#000">Copyright © 2024 - Transnet | Transnet is maintaned and controlled by the Thornsbury Government Department of Public Transport</div>
