--- a/about.html
+++ b/about.html
@@ -5,24 +5,24 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta charset="utf-8">
-  <title>Transnet</title>
-  <meta name="description" content="Thornsbury's train, tram & bus operator.">
-  <meta property="og:title" content="Transnet">
+  <title>About - Transnet</title>
+  <meta name="description" content="About how Transnet started.">
+  <meta property="og:title" content="About - Transnet">
   <meta property="og:type" content="website">
   <meta property="og:url" content="/">
-  <meta name="og:description" content="Thornsbury's train, tram & bus operator.">
-  <meta property="og:image" content="/img/icon.png">
+  <meta name="og:description" content="About how Transnet started.">
+  <meta property="og:image" content="img/C6001.png">
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="icon" href="/img/icon.png" sizes="any">
   <link rel="apple-touch-icon" href="/img/icon.png">
   <!-- Place favicon.ico in the root directory -->
-  <link rel="stylesheet" href="/css/nsw-design.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/nsw-design-system@3/dist/css/main.css">
   <link rel="stylesheet" href="/css/hcs.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-   <nav class="nsw-skip nsw-skip--light" aria-label="Skip to links">
+  <nav class="nsw-skip nsw-skip--light" aria-label="Skip to links">
     <a href="#"><span>Skip to navigation</span></a>
     <a href="#"><span>Skip to content</span></a>
   </nav>
@@ -95,95 +95,25 @@
   
 </head>
 
-
 <body style="letter-spacing: -0.0045em;">
-  
-  <div class="nsw-hero-banner nsw-hero-banner--dark">
+    <div class="nsw-hero-banner nsw-hero-banner--dark">
     <div class="nsw-hero-banner__container">
       <div class="nsw-hero-banner__wrapper">
         <div class="nsw-hero-banner__content">
-          <h1 style="color:#000">Welcome to the new & improved Transnet website.</h1>
-          <p class="nsw-intro" style="color:#000">We welcome those onto our new website with open arms</p>
+          <h1 style="color:#000">How Transnet started</h1>
+          <p class="nsw-intro" style="color:#000">From the 1900's to today, how did we grow?</p>
         </div>
         <div class="nsw-hero-banner__box">
-          <img class="nsw-hero-banner__image" src="/img/cover.png" alt="C6003 entering Avandale">
+          <img class="nsw-hero-banner__image " src="./img/cover.png" alt="C Set 6001 headed towards Carisle" />
         </div>
       </div>
     </div>
   </div>
 
-<div class="nsw-m-right-md nsw-m-left-md">
-<div class="nsw-p-top-sm">
-<h1>Quick Links</h1>
-</div>
-  <div class="nsw-grid">
-    <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
-      <div class="nsw-card">
-        <div class="nsw-card__image">
-          <img src="./img/C6001.png" alt="C6001">
-        </div>
-        <div class="nsw-card__content">
-          <div class="nsw-card__title">
-            <a href="/map" style="color: #000">Network Map</a>
-          </div>
-          <div class="nsw-card__copy" style="color: #000">The official suburban & regional railway network map.</div>
-          <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>
-        </div>
-      </div>
+  <div class="nsw-p-top-sm">
+    <h1>The start of everything</h1>
+    <p>Testing text</p>
     </div>
-
-    <!-- <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
-      <div class="nsw-card">
-        <div class="nsw-card__image">
-          <img src="./img/dynmap.png" alt="Screenshot of Harlon City Server's dynmap">
-        </div>
-        <div class="nsw-card__content">
-          <div class="nsw-card__title">
-            <a href="https://dynmap.harlonserver.net" target="_blank" rel="noopener noreferrer">Dynmap</a>
-          </div>
-          <div class="nsw-card__copy">Find stations, landmarks and more on the server and track your location in real time.</div>
-          <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>-->
-        </div> 
-      </div>
-    </div>
-  </div>
-  
-  <div class="nsw-m-right-md nsw-m-left-md">
-    <div class="nsw-p-top-sm">
-  <h1>Transnet News:</h1>
-  <div class="nsw-grid">
-    <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
-      <div class="nsw-card">
-        <div class="nsw-card__image">
-          <img src="./img/rail-replacement.png" alt="">
-        </div>
-        <div class="nsw-card__content">
-          <div class="nsw-card__title">
-            <a href="/news/crosscity-works" style="color: #000">Cross City Improvement works</a>
-          </div>
-          <div class="nsw-card__copy" style="color: #000">We're currently improving the Avandale, Morrinallea, Wynthorpe & Wellington Lines, to allow more trains, more often.</div>
-                   <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>
-        </div>
-      </div>
-    </div>
-
-    <!-- <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
-      <div class="nsw-card">
-        <div class="nsw-card__image">
-          <img src="./img/carlisle.png" alt="Screenshot of Harlon City Server's dynmap">
-        </div>
-        <div class="nsw-card__content">
-          <div class="nsw-card__title">
-            <a href="/" target="_blank" rel="noopener noreferrer" style="color:#000">Testing</a>
-          </div>
-          <div class="nsw-card__copy" style="color:#000">Sample text.</div>
-          <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>
-        </div>
-      </div>
-    </div> -->
-  </div>
-
-  
 
   <br>
 <script src="https://cdn.jsdelivr.net/npm/nsw-design-system@3/dist/js/main.min.js"></script>
