--- a/about.html
+++ b/about.html
@@ -110,10 +110,12 @@
     </div>
   </div>
 
+  <div class="nsw-m-right-md nsw-m-left-md">
   <div class="nsw-p-top-sm">
     <h1>The start of everything</h1>
     <p>Testing text</p>
     </div>
+</div>
 
   <br>
 <script src="https://cdn.jsdelivr.net/npm/nsw-design-system@3/dist/js/main.min.js"></script>
