--- a/about.html
+++ b/about.html
@@ -101,7 +101,7 @@
       <div class="nsw-hero-banner__wrapper">
         <div class="nsw-hero-banner__content">
           <h1 style="color:#000">How Transnet started</h1>
-          <p class="nsw-intro" style="color:#000">From the 1900's to today, how did we grow?</p>
+          <p class="nsw-intro" style="color:#000">From 1899 to today, how did we grow?</p>
         </div>
         <div class="nsw-hero-banner__box">
           <img class="nsw-hero-banner__image " src="./img/cover.png" alt="C Set 6001 headed towards Carisle" />
@@ -113,7 +113,13 @@
   <div class="nsw-m-right-md nsw-m-left-md">
   <div class="nsw-p-top-sm">
     <h1>The start of everything</h1>
-    <p>Testing text</p>
+    <p>In 1899, Alec Thornhill & Norwell Bury kicked off the revolution of Public Transport by creating the Thornhill & Bury Railway Co. (TBRC for short), they were the forefront <br/>
+    of the railway network as they unified the unoccupied lines of the network for passenger service. Alec and Norwell both we're proud of what they did as they brought a railway <br/>
+    network that was divided for years.</p>
+    <p>The evolution of the railway network really kicked off on September 19th, 1901 as the Benolla (now Fairmead) Line was the first electrified line that TBRC had created, the first electric <br/>
+    train, Z1, was the first to roll out of the production line and straight into passenger service. Day one was a success with everyone on the line, and the total passengers at <br/>
+    the end of the day was 8,924. It was revolutionary and never seen before in the network.</p>
+    <p>From that day forward, Thornsbury's railway network changed forever.</p> <!-- insert reference to melbourne's railways network changing forever blah blah blah-->
     </div>
 </div>
 
