--- a/about.html
+++ b/about.html
@@ -123,6 +123,22 @@
     </div>
 </div>
 
+<div class="nsw-m-right-md nsw-m-left-md">
+    <div class="nsw-p-top-sm">
+      <h1>How Transnet came along</h1>
+      <p>In 1998, network disbutions we're arising, and the government had to step in with a crippling operator, TFTN (which was owned by MotionRail, a now defunct company). The government <br/>
+      had created a solution by creating Transnet, the transport operator for Thornsbury, as the remaining modes of public transport were not establisted and combined yet. TFTN completely was <br/>
+      removed in 2002 following an accident on the Southmead Line (ex-Tunbridge Wells) involving a test train that TFTN was planning on introducing.</p>
+      <p>From that day onwards, Transnet was appointed primary rail operator and transport company for Thornsbury under the provision of the Department of Public Transport</p>
+  </div>
+
+  <div class="nsw-m-right-md nsw-m-left-md">
+    <div class="nsw-p-top-sm">
+      <h1>What's the future like for Transnet?</h1>
+      <p>Here at Transnet, we're committed to bringing better transport, including improved train services, more bus routes and improved tram services. We are commited to meeting our Future Proof <br/>
+      plan before 2030. Some of our plans are currently in action and we are committed to getting all our plans completed before 2030.</p>
+  </div>
+
   <br>
 <script src="https://cdn.jsdelivr.net/npm/nsw-design-system@3/dist/js/main.min.js"></script>
 <script>window.NSW.initSite()</script>
