--- a/about.html
+++ b/about.html
@@ -131,6 +131,7 @@
       removed in 2002 following an accident on the Southmead Line (ex-Tunbridge Wells) involving a test train that TFTN was planning on introducing.</p>
       <p>From that day onwards, Transnet was appointed primary rail operator and transport company for Thornsbury under the provision of the Department of Public Transport</p>
   </div>
+</div>
 
   <div class="nsw-m-right-md nsw-m-left-md">
     <div class="nsw-p-top-sm">
