--- a/404.html
+++ b/404.html
@@ -5,17 +5,17 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta charset="utf-8">
-  <title>Page not found | Harlon Transit</title>
+  <title>Page not found - Transnet</title>
   <meta name="description" content="You might have typed the URL incorrectly, or the page you are looking for may have been moved or deleted. Try these links to see if you can find what you're looking for.">
-  <meta property="og:title" content="Page not found | Harlon Transit">
+  <meta property="og:title" content="Page not found |- Transnet">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://ht.harlonserver.net">
+  <meta property="og:url" content="/">
   <meta name="og:description" content="You might have typed the URL incorrectly, or the page you are looking for may have been moved or deleted. Try these links to see if you can find what you're looking for.">
-  <meta property="og:image" content="https://ht.harlonserver.net/img/transit-1.jpg">
+  <meta property="og:image" content="/img/icon.png">
 
   <link rel="manifest" href="site.webmanifest">
-  <link rel="icon" href="/favicon.ico" sizes="any">
-  <link rel="apple-touch-icon" href="/favicon.png">
+  <link rel="icon" href="/img/icon.png" sizes="any">
+  <link rel="apple-touch-icon" href="/img/icon.png">
   <!-- Place favicon.ico in the root directory -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/nsw-design-system@3/dist/css/main.css">
   <link rel="stylesheet" href="/css/hcs.css">
@@ -27,7 +27,7 @@
     <a href="#"><span>Skip to content</span></a>
   </nav>
   <div class="nsw-masthead nsw-masthead--light">
-    <div class="nsw-container"><strong>IP: play.harlonserver.net - Minecraft 1.20.4 with Optifine</strong></div>
+    <div class="nsw-container"><strong></strong></div>
   </div>
 
   <header class="nsw-header">
@@ -36,12 +36,9 @@
         <div class="nsw-header__main">
           <div class="nsw-header__waratah">
             <a href="/">
-              <img src="/favicon.ico" alt="" width="64px" height="64px"/>
-              <span class="sr-only">Harlon Transit</span>
+              <img src="/img/logo.png" alt="" height="32px"/>
+             
             </a>
-          </div>
-          <div class="nsw-header__name">
-            <div class="nsw-header__title">Harlon Transit</div>
           </div>
         </div>
         <div class="nsw-header__menu">
@@ -67,61 +64,52 @@
         </a>    </li>
       <li>
         <a href="/map">
-          <span>Transport Map</span>
+          <span>Network Map</span>
           </a>    </li>
-      <!--<li>
+      <li>
         <a href="/about">
             <span>About</span>
-            </a>    </li>-->
+            </a>    </li>
       <!--<li>
-        <a href="https://parliament.harlonserver.net" target="_blank" rel="noopener noreferrer">
-          <span>Parliament</span>
+        <a href="https://railcomms.transnetpt.com" target="_blank" rel="noopener noreferrer">
+          <span>RailComms</span>
         </a>    </li>-->
       <li>
-        <a href="https://harlonserver.net" target="_blank" rel="noopener noreferrer">
-          <span>Main Harlon Website</span>
-        </a>    </li>
-      <li>
-        <a href="https://wiki.harlonserver.net" target="_blank" rel="noopener noreferrer">
-          <span>Wiki</span>
-        </a>    </li>
-      <li>
-        <a href="https://dynmap.harlonserver.net" target="_blank" rel="noopener noreferrer">
-          <span>Dynmap</span>
+        <a href="/travelsmart" target="_blank" rel="noopener noreferrer">
+          <span>TravelSmart</span>
         </a>    </li>
     </ul>
   </nav>
-  <div class="nsw-global-alert nsw-global-alert--light js-global-alert" role="alert">
+  <!-- <div class="nsw-global-alert nsw-global-alert--light js-global-alert" role="alert">
     <div class="nsw-global-alert__wrapper">
       <div class="nsw-global-alert__content">
-        <div class="nsw-global-alert__title">Trip Planner Out of Service</div>
-        <p>The HarlonTransit Trip Planner is out of service. A replacement trip planner will be developed and released to coincide with the opening of mainline services operated by Harlonian National. We apologise for any inconvenience caused.</p>
+        <div class="nsw-global-alert__title">This website is still under construction</div>
+        <p>We are currently improving the Transnet website, <strong>this website is only a demonstration and is expected to break</strong> - by pressing the X, you acknowledge that this site may not work as intended</p>
       </div>
       <button class="nsw-icon-button js-close-alert" type="button" aria-expanded="true">
         <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">close</span>
         <span class="sr-only">Close message</span>
       </button>
-    </div>
+    </div> -->
   </div>
   
 </head>
 
-<body>
+<body style="letter-spacing: -0.0045em;">
     <div class="nsw-hero-banner nsw-hero-banner--dark">
     <div class="nsw-hero-banner__container">
       <div class="nsw-hero-banner__wrapper">
         <div class="nsw-hero-banner__content">
-          <h1>Page not found</h1>
-          <p class="nsw-intro">You might have typed the URL incorrectly, or the page you are looking for may have been moved or deleted. Try these links to see if you can find what you're looking for.</p>
+          <h1 style="color:#000">Page not found</h1>
+          <p class="nsw-intro" style="color:#000">You might have typed the URL incorrectly, or the page you are looking for may have been moved or deleted. Try these links to see if you can find what you're looking for.</p>
         </div>
         <div class="nsw-hero-banner__links">
           <div class="nsw-hero-banner__list">
             <ul>
-              <li><a href="./index.html">HarlonTransit Home</a></li>
-              <li><a href="./map.html">HarlonTransit Map</a></li>
-              <li><a href="https://harlontripplanner.muffinbardeyt.repl.co/" target="_blank" rel="noopener noreferrer">HarlonTransit Trip Planner</a></li>
-              <li><a href="https://harlonserver.net" target="_blank" rel="noopener noreferrer">Main Harlon City Server Website</a></li>
-              <li><a href="https://dynmap.harlonserver.net" target="_blank" rel="noopener noreferrer">Dynmap</a></li>
+              <li><a style="color:#000" href="/">Home</a></li>
+              <li><a style="color:#000" href="/map">Network Map</a></li>
+              <li><a style="color:#000" href="/about" target="_blank" rel="noopener noreferrer">About us</a></li>
+              <li><a style="color:#000" href="/travelsmart" target="_blank" rel="noopener noreferrer">TravelSmart</a></li>
             </ul>
         </div>
         <div class="nsw-hero-banner__box">
@@ -140,19 +128,15 @@
 <footer class="nsw-footer nsw-footer--dark">
   <div class="nsw-footer__lower">
     <div class="nsw-container">
-      <p>HarlonTransit: <strong>Keeping You Moving</strong></p>
-      <hr>
-      <ul>
-        <li><a href="https://discord.gg/qMmk8MuEBz" target="_blank" rel="noopener noreferrer">Discord</a></li>
-        <li><a href="https://youtube.com/channel/UCUsBniuYo4fKNWy-PcAoDNg" target="_blank" rel="noopener noreferrer">YouTube</a></li>
-        <li><a href="https://twitter.com/HarlonServer" target="_blank" rel="noopener noreferrer">X/Twitter</a></li>
-        <li><a href="https://www.tiktok.com/@harlonserver" target="_blank" rel="noopener noreferrer">Tiktok</a></li>
-        <li><a href="https://www.github.com/HarlonServer" target="_blank" rel="noopener noreferrer">GitHub</a></li>
-        <!--<li><a href="https://store.harlonserver.net" target="_blank" rel="noopener noreferrer">Server Store</a></li>-->
+      <p style="color:#000">Transnet - <strong>Thornsbury's train, tram & bus operator.</strong></p>
+      <hr style="background-color:#000">
+      <ul style="color:#000">
+        <li><a  style="color:#000" href="https://x.com/TransnetPT" target="_blank" rel="noopener noreferrer">X/Twitter</a></li>
+        <li><a  style="color:#000" href="https://bsky.app/profile/transnetpt.com" target="_blank" rel="noopener noreferrer">Bluesky</a></li>
       </ul>
       <div class="nsw-footer__info">
-        <div class="nsw-footer__copyright">Copyright © Harlon City Server. NOT AN OFFICIAL MINECRAFT SERVER. NOT APPROVED BY OR ASSOCIATED WITH MOJANG OR MICROSOFT CORPORATION.</div>
-        <div class="nsw-footer__built">Powered by the <a href="https://digitalnsw.github.io/nsw-design-system/" target="_blank" rel="noopener noreferrer">NSW Design System,</a><a href="https://html5boilerplate.com/" target="_blank" rel="noopener noreferrer">HTML5 Boilerplate</a>and <a href="https://www.11ty.dev/" target="_blank" rel="noopener noreferrer">Eleventy.</a></div>
+        <div class="nsw-footer__copyright" style="color:#000">Copyright © 2024 - Transnet | Transnet is maintaned and controlled by the Thornsbury Government Department of Public Transport</div>
+<img src="https://transnetpt.com/img/TG-DPT-logo.png" alt="Thornsbury Government - Department of Public Transport Logo" style="width: 25%">
       </div>
     </div>
   </div>
