--- a/404.html
+++ b/404.html
@@ -17,7 +17,7 @@
   <link rel="icon" href="/img/icon.png" sizes="any">
   <link rel="apple-touch-icon" href="/img/icon.png">
   <!-- Place favicon.ico in the root directory -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/nsw-design-system@3/dist/css/main.css">
+  <link rel="stylesheet" href="/css/nsw-design.css">
   <link rel="stylesheet" href="/css/hcs.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
