--- a/travelsmart.html
+++ b/travelsmart.html
@@ -100,8 +100,8 @@
     <div class="nsw-hero-banner__container">
       <div class="nsw-hero-banner__wrapper">
         <div class="nsw-hero-banner__content">
-          <h1 style="color:#000">How Transnet started</h1>
-          <p class="nsw-intro" style="color:#000">From 1899 to today, how did we grow?</p>
+          <h1 style="color:#000">TravelSmart Fares</h1>
+          <p class="nsw-intro" style="color:#000">Effective from August 1st, 2024</p>
         </div>
         <div class="nsw-hero-banner__box">
           <img class="nsw-hero-banner__image " src="./img/cover.png" alt="C Set 6001 headed towards Carisle" />
@@ -112,10 +112,8 @@
 
   <div class="nsw-m-right-md nsw-m-left-md">
   <div class="nsw-p-top-sm">
-	<h1>TravelSmart Fares</h1>	
 </div>
 				<div class="main-holder" id="page__general">
-<p>Effective from August 1st, 2024</p>
 
 <h2>Daily Fare</h2>
 <table>
