--- a/index.html
+++ b/index.html
@@ -132,16 +132,16 @@
       </div>
     </div>
 
-    <!-- <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
+    <div class="nsw-col nsw-col-md-6 nsw-col-lg-4">
       <div class="nsw-card">
         <div class="nsw-card__image">
-          <img src="./img/dynmap.png" alt="Screenshot of Harlon City Server's dynmap">
+          <img src="./img/travelsmart.png" alt="Screenshot of Harlon City Server's dynmap">
         </div>
         <div class="nsw-card__content">
           <div class="nsw-card__title">
-            <a href="https://dynmap.harlonserver.net" target="_blank" rel="noopener noreferrer">Dynmap</a>
+            <a href="/travelsmart" target="_blank" rel="noopener noreferrer">TravelSmart Fares</a>
           </div>
-          <div class="nsw-card__copy">Find stations, landmarks and more on the server and track your location in real time.</div>
+          <div class="nsw-card__copy">View current fares for TravelSmart cards.</div>
           <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>-->
         </div> 
       </div>
