--- a/travelsmart.html
+++ b/travelsmart.html
@@ -104,7 +104,7 @@
           <p class="nsw-intro" style="color:#000">Effective from August 1st, 2024</p>
         </div>
         <div class="nsw-hero-banner__box">
-          <img class="nsw-hero-banner__image " src="./img/cover.png" alt="C Set 6001 headed towards Carisle" />
+          <img class="nsw-hero-banner__image " src="./img/travelsmart.png" alt="C Set 6001 headed towards Carisle" />
         </div>
       </div>
     </div>
