--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="/">
   <meta name="og:description" content="About how Transnet started.">
-  <meta property="og:image" content="img/C6001.png">
+  <meta property="og:image" content="/img/C6001.png">
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="icon" href="/img/icon.png" sizes="any">
