--- a/travelsmart.html
+++ b/travelsmart.html
@@ -5,13 +5,13 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta charset="utf-8">
-  <title>About - Transnet</title>
-  <meta name="description" content="About how Transnet started.">
-  <meta property="og:title" content="About - Transnet">
+  <title>TravelSmart - Transnet</title>
+  <meta name="description" content="View current fares for TravelSmart cards.">
+  <meta property="og:title" content="TravelSmart - Transnet">
   <meta property="og:type" content="website">
   <meta property="og:url" content="/">
-  <meta name="og:description" content="About how Transnet started.">
-  <meta property="og:image" content="img/C6001.png">
+  <meta name="og:description" content="View current fares for TravelSmart cards.">
+  <meta property="og:image" content="/img/travelsmart.png">
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="icon" href="/img/icon.png" sizes="any">
