--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
           <div class="nsw-card__title">
             <a href="/travelsmart" target="_blank" rel="noopener noreferrer">TravelSmart Fares</a>
           </div>
-          <div class="nsw-card__copy">View current fares for TravelSmart cards.</div>
-          <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>-->
+          <div class="nsw-card__copy" style="color: #000">View current fares for TravelSmart cards.</div>
+          <span class="material-icons nsw-material-icons" focusable="false" aria-hidden="true">east</span>
         </div> 
       </div>
     </div>
