--- a/map.html
+++ b/map.html
@@ -27,7 +27,7 @@
     <a href="#"><span>Skip to content</span></a>
   </nav>
   <div class="nsw-masthead nsw-masthead--light">
-    <div class="nsw-container"><strong>DEMONSTRATION WEBSITE</strong></div>
+    <div class="nsw-container"><strong>Beta Website</strong> - For the current Transnet website, <a href="transnetpt.com">click here</a></div>
   </div>
 
   <header class="nsw-header">
@@ -80,7 +80,7 @@
         </a>    </li>
     </ul>
   </nav>
-  <div class="nsw-global-alert nsw-global-alert--light js-global-alert" role="alert">
+  <!-- <div class="nsw-global-alert nsw-global-alert--light js-global-alert" role="alert">
     <div class="nsw-global-alert__wrapper">
       <div class="nsw-global-alert__content">
         <div class="nsw-global-alert__title">This website is still under construction</div>
@@ -91,7 +91,7 @@
         <span class="sr-only">Close message</span>
       </button>
     </div>
-  </div>
+  </div> -->
   
 </head>
 
