--- a/travelsmart.html
+++ b/travelsmart.html
@@ -27,7 +27,7 @@
     <a href="#"><span>Skip to content</span></a>
   </nav>
   <div class="nsw-masthead nsw-masthead--light">
-    <div class="nsw-container"><strong>Beta Website</strong> - For the current Transnet website, <a href="transnetpt.com">click here</a></div>
+    <div class="nsw-container"><strong>Beta Website</strong> - For the current Transnet website, <a href="https://transnetpt.com">click here</a></div>
   </div>
 
   <header class="nsw-header">
